Prevent overflow on heroes. (#364)

--- a/themes/bene_parent/css/bene-style.css
+++ b/themes/bene_parent/css/bene-style.css
@@ -391,6 +391,7 @@ tbody td {
   display: flex;
   justify-content: center;
   width: 100vw;
+  max-width: 100%;
   position: relative;
   z-index: 20; }
 
