--- a/themes/bene_parent/sass/config/_01.vars.scss
+++ b/themes/bene_parent/sass/config/_01.vars.scss
@@ -429,6 +429,7 @@ $vars: (
   display: flex;
   justify-content: center;
   width: 100vw;
+  max-width: 100%;
   position: relative;
   z-index: 20;
 }
